coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__agents_dialog__tests__agents_library_grouped.snap
---
source: app/tui/src/presentation/agents_dialog.test.rs
expression: "body_only(&state, &[])"
---
 Running   [Library]
▸ + Create new agent

  ── User agents ──
  alpha  ·  user
    First user agent

  ── Built-in agents ──
  Explore  ·  built-in  (cannot be modified)
    Fast read-only search agent


←/→ to switch · ↑/↓ to navigate · Enter to select · Esc to close
