coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__agents_dialog__tests__agents_running_empty.snap
---
source: app/tui/src/presentation/agents_dialog.test.rs
expression: "body_only(&state, &[])"
---
[Running]   Library 
No subagents are currently running.

←/→ to switch · ↑/↓ to navigate · Enter to select · Esc to close
