coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__agents_dialog__tests__agents_wizard_already_exists.snap
---
source: app/tui/src/presentation/agents_dialog.test.rs
expression: "body_only(&state, &[])"
---
 Running   [Library]
Step 4 of 4 — Confirm

Review and press Enter to create:

  Name        my-agent
  Description Handles XYZ.
  Source      Project (.cocode/agents)

  An agent file already exists at /home/u/.cocode/agents/my-agent.md.

Enter advance · Esc back · ←/→/Home/End move caret · ↑/↓ on source
