coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__agents_dialog__tests__agents_wizard_name.snap
---
source: app/tui/src/presentation/agents_dialog.test.rs
expression: "body_only(&state, &[])"
---
 Running   [Library]
Step 1 of 4 — Name

Agent identifier (kebab-case or PascalCase):
  > my-agent▏

Letters, digits, '-', '_'. Used as the markdown filename stem.

Enter advance · Esc back · ←/→/Home/End move caret · ↑/↓ on source
